--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,12 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/3cmde/OneDrive/바탕 화면/동규/Program_Language/java/resource/set/jstl.jar"/>
+	<classpathentry kind="lib" path="C:/Users/3cmde/OneDrive/바탕 화면/동규/Program_Language/java/resource/set/mail-1.4.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/3cmde/OneDrive/바탕 화면/동규/Program_Language/java/resource/set/mybatis-3.5.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/3cmde/OneDrive/바탕 화면/동규/Program_Language/java/resource/set/ojdbc6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/3cmde/OneDrive/바탕 화면/동규/Program_Language/java/resource/set/standard.jar"/>
+	<classpathentry kind="lib" path="C:/Users/3cmde/OneDrive/바탕 화면/동규/Program_Language/java/resource/set/tomcat-dbcp.jar"/>
+	<classpathentry kind="lib" path="C:/Users/3cmde/OneDrive/바탕 화면/동규/Program_Language/java/resource/set/json-simple-1.1.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
