--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -9,4 +9,18 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <!-- user -->
+
+	<servlet>
+	  	<servlet-name>UserFrontController</servlet-name>
+	  	<servlet-class>com.couponPeople.app.user.UserFrontController</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+  		<servlet-name>UserFrontController</servlet-name>
+  		<url-pattern>*.us</url-pattern>
+	</servlet-mapping>
+  
 </web-app>
+
