--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//WebContent/app/coupon/couponDetail.jsp=UTF-8
 encoding//WebContent/app/partial/footer.jsp=UTF-8
+encoding//WebContent/app/review/reviewCoupon.jsp=UTF-8
